# gratefulagents

./: .dockerignore  .gitignore  .golangci.yml  .semrelrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.injector  Dockerfile.worker  Makefile  PROJECT  README.md  SECURITY.md  boilerplate.go.txt  buf.gen.yaml  buf.yaml  generate.sh  go.mod  go.sum  release-please-config.json
cmd/: main.go
configs/: runtime-image-catalog.example.yaml
platform-app/: .gitignore  AGENTS.md  Makefile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
platform-app/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
platform-app/tauri/src-tauri/capabilities/: default.json  desktop-global-shortcuts.json
platform-app/tauri/src-tauri/icons/: icon.icns
platform-app/tauri/src-tauri/plugins/google-oauth/: Cargo.toml  build.rs  package.json
platform-app/tauri/src-tauri/plugins/google-oauth/android/: build.gradle.kts
platform-app/tauri/src-tauri/plugins/google-oauth/android/src/main/java/: GoogleOauthPlugin.kt
platform-app/tauri/src-tauri/plugins/google-oauth/android/src/test/java/: GoogleOauthPluginTest.kt
platform-app/tauri/src-tauri/plugins/google-oauth/guest-js/: index.ts
platform-app/tauri/src-tauri/plugins/google-oauth/ios/: Package.swift
platform-app/tauri/src-tauri/plugins/google-oauth/ios/Sources/: GoogleOauthPlugin.swift
platform-app/tauri/src-tauri/plugins/google-oauth/permissions/: default.toml
platform-app/tauri/src-tauri/plugins/google-oauth/permissions/autogenerated/: reference.md
platform-app/tauri/src-tauri/plugins/google-oauth/permissions/autogenerated/commands/: start_google_oauth.toml
platform-app/tauri/src-tauri/plugins/google-oauth/permissions/schemas/: schema.json
platform-app/tauri/src-tauri/plugins/google-oauth/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
platform-app/tauri/src-tauri/plugins/mobile-navigation/: Cargo.toml
platform-app/tauri/src-tauri/plugins/mobile-navigation/android/: build.gradle.kts
platform-app/tauri/src-tauri/plugins/mobile-navigation/android/src/main/java/dev/gratefulagents/app/mobilenavigation/: MobileNavigationPlugin.kt
platform-app/tauri/src-tauri/plugins/mobile-navigation/ios/: Package.swift
platform-app/tauri/src-tauri/plugins/mobile-navigation/ios/Sources/MobileNavigationPlugin/: MobileNavigationPlugin.swift
platform-app/tauri/src-tauri/plugins/mobile-navigation/src/: lib.rs  mobile.rs
platform-app/tauri/src-tauri/scripts/: xcode-build-rust.sh
platform-app/tauri/src-tauri/src/: anthropic_oauth.rs  copilot_oauth.rs  deep_link.rs  diagnostics.rs  drag_drop.rs  global_shortcut.rs  lib.rs  local_creds.rs  macos.rs  main.rs  menu.rs  oauth_common.rs  openai_oauth.rs  tray.rs  updater.rs
scripts/: extract-ios-ipa-metadata.py  extract-ios-ipa-metadata_test.py  fetch-k3s-source.sh  generate-altstore-source.mjs  generate-altstore-source.test.mjs  install-app.sh  install-docker-engine.sh  install-k3s-dependencies.sh  install-k3s.sh  install-k3s_test.sh  install-kind.sh  latest-release-tag.sh  latest-release-tag_test.sh
user-docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
website/: .gitignore  README.md  SEO-AUDIT.md  astro.config.mjs  package.json  pnpm-lock.yaml
(+1117 files in other folders)
