[package]
name = "tauri-plugin-mobile-navigation"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["gratefulagents"]
description = "Native mobile navigation integration for the gratefulagents WebView"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-mobile-navigation"

[dependencies]
tauri = { version = "2.11.2" }
serde = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
